--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser-dynamic": "^5.1.0",
     "@angular/router": "^5.1.0",
     "@nebular/theme": "^2.0.0-rc.4",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.8",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^1.9.1",
+    "ng2-smart-table": "^1.2.2",
     "popper.js": "^1.12.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
