--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^5.1.0",
     "@nebular/theme": "^2.0.0-rc.4",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.8",
+    "angular2-toaster": "^4.0.1",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
