--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nebular/auth": "^2.0.0-rc.4",
     "@nebular/theme": "^2.0.0-rc.4",
     "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.8",
+    "@swimlane/ngx-charts": "^7.0.1",
     "angular2-toaster": "^4.0.1",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
